<package format="2">
  <name>myfirst</name>
  <version>0.1.0</version>
  <description>A reference participant for the DARPA SubT challenge.</description>
  <license>Apache 2.0</license>
  <maintainer email="diane@whatever.com">Diane</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>subt_communication_broker</depend>
  <depend>subt_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
